--- a/tuumes/phase2/src/main/resources/static/view_event.html
+++ b/tuumes/phase2/src/main/resources/static/view_event.html
@@ -7,10 +7,6 @@
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
     <link href="assets/css/global.css" rel="stylesheet">
     <style>
-        .splash-img {
-            width: 100%;
-        }
-
         .event-text {
             font-size: 4rem;
         }
@@ -23,49 +19,50 @@
 </head>
 
 <body class="grey lighten-4">
-    <nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
-        <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="register.html">Register</a>
-                </li>
-            </ul>
-            <span class="navbar-text white-text">
+<nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
+    <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="register.html">Register</a>
+            </li>
+        </ul>
+        <span class="navbar-text white-text">
                 Guest
             </span>
-        </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container-fluid mt-5">
-        <div class="row justify-content-center">
-            <div class="container white text-center mt-5 pt-4">
-                    <h3>Event Name</h3>
+<div class="container-fluid mt-5">
+    <div class="row justify-content-center">
+        <div class="container white text-center mt-5 pt-4">
+            <h3>Event Name</h3>
 
-                    <p class="mt-4 mb-4">Event description goes here. It describes the event concisely.</p>
+            <p class="mt-4 mb-4">Event description goes here. It describes the event concisely.</p>
 
-                    <p class="mt-3 mb-3">Time: Event start time through event end time</p>
+            <p class="mt-3 mb-3">Time: Event start time through event end time</p>
 
-                    <p class="mt-3 mb-3">Location: Room name goes here.</p>
+            <p class="mt-3 mb-3">Location: Room name goes here.</p>
 
-                    <p class="mt-3 mb-3">Capacity: #/total</p>
+            <p class="mt-3 mb-3">Capacity: #/total</p>
 
-                    <a href="" class="btn btn-secondary"><i class="fa fa-calendar-plus fa-lg"></i>  &thinsp; Register</a>
-                    <br><br>
-            </div>
+            <a href="" class="btn btn-secondary"><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Register</a>
+            <br><br>
         </div>
     </div>
+</div>
 </body>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdn.mkn.cx/MDB/js/mdb.min.js"></script>
 <script type="text/javascript" src="assets/js/global.js"></script>
 </html>
