--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -12,7 +12,7 @@
 
 <body class="grey lighten-4">
     <nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
-        <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
+        <a class="navbar-brand" href="../index.html"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
