--- a/tuumes/phase2/src/main/resources/static/index.html
+++ b/tuumes/phase2/src/main/resources/static/index.html
@@ -12,14 +12,14 @@
         }
 
         .welcome-text {
-            font-size: 4rem;
+            font-size: 3.5rem;
         }
     </style>
 </head>
 
 <body class="grey lighten-4">
     <nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
-        <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
+        <a class="navbar-brand" href="index.html"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" 
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
