--- a/tuumes/phase2/src/main/resources/static/account/view_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/view_event.html
@@ -21,8 +21,8 @@
 <body class="grey lighten-4">
 <nav class="navbar navbar-expand-lg navbar-dark indigo mb-4">
     <a class="navbar-brand" href="#"><i class="fas fa-street-view"></i> <b>TUUMES</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarText" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
@@ -53,16 +53,16 @@
 
             <p class="mt-3 mb-3">Capacity: #/total</p>
 
-            <a href="" class="btn btn-secondary"><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Register</a>
+            <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Register</a>
             <br><br>
         </div>
     </div>
 </div>
 </body>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://cdn.mkn.cx/MDB/js/mdb.min.js"></script>
-<script type="text/javascript" src="assets/js/global.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
+        type="text/javascript"></script>
+<script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
+<script src="assets/js/global.js" type="text/javascript"></script>
 </html>
