Fixed a couple of mistakes in view_event.html and index.html.

--- a/tuumes/phase2/src/main/resources/static/index.html
+++ b/tuumes/phase2/src/main/resources/static/index.html
@@ -51,7 +51,7 @@
                 
                     <p class="mt-4 mb-4">Our next generation system helps keep conferences running as smooth as possible. For organizers, 
                         we offer powerful tools to help them manage their users and speakers and for their users, we provide
-                        a simple and seamless design allowing them to opt-in and out of events occuring at the conference.
+                        a simple and seamless design allowing them to opt-in and out of events occurring at the conference.
                         What are you waiting for? Register for an account today!
                     </p>
 
