--- a/tuumes/phase2/src/main/resources/static/account/view_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/view_message.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>EventName - TUUMES</title>
+    <title>View Message - TUUMES</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
@@ -9,6 +9,13 @@
     <style>
         .container {
             border-radius: 25px
+        }
+
+        .stamp-img {
+            width: 5%;
+            display: block;
+            margin-left: auto;
+            margin-right: 5;
         }
     </style>
 </head>
@@ -37,17 +44,16 @@
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
-        <h3>Event Name</h3>
+        <img src="../assets/img/stamp.png" class="stamp-img">
 
-        <p class="mt-4 mb-4">Event description goes here. It describes the event concisely.</p>
+        <h3>From: SenderName</h3>
 
-        <p class="mt-3 mb-3">Time: Event start time through event end time</p>
+        <p>Sender email goes here.</p>
 
-        <p class="mt-3 mb-3">Location: Room name goes here.</p>
+        <p class="mb-3">Message content goes here. It contains the message content.</p>
 
-        <p class="mt-3 mb-3">Capacity: #/total</p>
-
-        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Register</a>
+        <a class="btn btn-secondary" href=""><i class="fa fa-envelope-open fa-lg"></i> &thinsp; Mark As Read</a><a
+            class="btn btn-secondary" href=""><i class="fa fa-archive fa-lg"></i> &thinsp; Archive</a>
         <br><br>
     </div>
 </div>
