More work on the controllers

--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="assets/css/global.css" rel="stylesheet">
+    <link href="../../assets/css/global.css" rel="stylesheet">
     <style>
         .container {
             border-radius: 25px
