--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet">
-    <link href="assets/css/global.css" rel="stylesheet">
+    <link href="../assets/css/global.css" rel="stylesheet">
     <style>
         .bigicon {
             font-size: 90px;
@@ -46,7 +46,8 @@
     </nav>
 
     <div class="container">
-        <div class="row justify-content-center mt-5">
+        <h1 class="text-center">Your Dashboard</h1>
+        <div class="row justify-content-center mt-4">
             <div class="col-2">
                 <div class="card">
                     <a href="events/view_all.html">
