--- a/tuumes/phase2/src/main/resources/static/account/add_speakers.html
+++ b/tuumes/phase2/src/main/resources/static/account/add_speakers.html
@@ -11,15 +11,10 @@
             border-radius: 25px
         }
 
-        .form-group, .md-form {
+        .form-group {
             width: 50%;
             margin-left: auto;
             margin-right: auto;
-        }
-
-        textarea {
-            overflow: auto;
-            height: 100%;
         }
 
     </style>
@@ -49,49 +44,22 @@
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
-        <h3 class="pb-3">Create a new event:</h3>
+        <h3 class="pb-3">Select Speakers</h3>
+
+        <p>Hold control to select more than one.</p>
 
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Event Name" type="text">
-        </div>
-
-        <div class="form-group">
-            <textarea autocomplete="off" class="form-control" name="description" placeholder="Event Description"
-                      rows="6"></textarea>
-        </div>
-
-        <div class="form-group">
-            <p>Start Time: </p>
-            <input autocomplete="off" class="form-control" name="startTime" placeholder="Start Time" type="date">
-        </div>
-
-        <div class="form-group">
-            <p>End Time: </p>
-            <input autocomplete="off" class="form-control" name="endTime" placeholder="End Time" type="datetime-local">
-        </div>
-
-        <div class="form-group">
-            <select name="room" class="browser-default custom-select">
-                <option disabled selected>Room</option>
-                <option value="1">Room Name One</option>
-                <option value="2">Room Name Two</option>
-                <option value="3">Room Name Three</option>
+            <select class="browser-default custom-select" multiple name="room">
+                <option disabled hidden selected></option>
+                <option value="1">Speaker Name One</option>
+                <option value="2">Speaker Name Two</option>
+                <option value="3">Speaker Name Three</option>
             </select>
-        </div>
-
-        <div class="md-form">
-            <input type="number" id="numSpeakers" name="numSpeakers" class="form-control" min="0">
-            <label for="numSpeakers">Number of Speakers</label>
-        </div>
-
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="isVip">
-            <label class="custom-control-label" for="isVip">VIPs Only?</label>
         </div>
 
         <br>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Create</a>
+        <a class="btn btn-secondary" href=""><i class="fa fa-user-check fa-lg"></i> &thinsp; Add Speakers</a>
         <br><br>
     </div>
 </div>
