--- a/tuumes/phase2/src/main/resources/static/register.html
+++ b/tuumes/phase2/src/main/resources/static/register.html
@@ -37,7 +37,7 @@
             <div class="col-4 align-self-center">
                 <div class="card card-body">
                     <h5 class="text-center">Register an account<h5>
-                    <form class="container needs-validation" id="login_form" novalidate>
+                    <form class="container needs-validation" id="register_form">
                         <div class="form-row">
                             <div class="md-form md-outline col-12 mb-0">
                                 <label for="name">Name</label>
@@ -50,10 +50,6 @@
                             <div class="md-form md-outline col-12 mt-3 mb-0">
                                 <label for="password">Password</label>
                                 <input type="password" id="password" class="form-control" name="password" required>
-                            </div>
-                            <div class="md-form md-outline col-12 mt-3 mb-2">
-                                <label for="c_password">Confirm Password</label>
-                                <input type="password" id="c_password" class="form-control" name="c_password" required>
                             </div>
                         </div>
                         <button class="btn btn-primary float-right no-wave" type="submit" id="register_submit">Register</button>
@@ -68,4 +64,41 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdn.mkn.cx/MDB/js/mdb.min.js"></script>
 <script type="text/javascript" src="assets/js/global.js"></script>
+
+<script>
+    $("#register_form").submit(function(e) {
+        if (!validate(this))
+            return false;
+
+        e.preventDefault();
+
+        // Parse data
+        let data = {};
+        $(":input", this).each(function(i, e) {
+            if (e.type !== "submit")
+                data[e.name] = e.value;
+        });
+
+        $.postJSON("/user/register", data, function(result) {
+            console.log(result);
+
+            if (result.valid) {
+                toastr.success("Your account has been registered.");
+                
+            } else {
+                switch (result.message) {
+                    case "EMAIL_IN_USE":
+                        toastr.error("This email is already in use.");
+                        break;
+                    default:
+                        toastr.error("Unexpected error: " + result.message);
+                        break;
+                }
+            }
+        });
+
+        return false;
+    });
+</script>
+
 </html>
