--- a/tuumes/phase2/src/main/resources/static/account/create_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/create_event.html
@@ -79,9 +79,17 @@
             </select>
         </div>
 
-        <div class="md-form">
-            <input type="number" id="numSpeakers" name="numSpeakers" class="form-control" min="0">
-            <label for="numSpeakers">Number of Speakers</label>
+        <p>Select Speakers</p>
+
+        <p>Hold control to select more than one or unselect.</p>
+
+        <div class="form-group">
+            <select class="browser-default custom-select" multiple name="speakers">
+                <option disabled hidden selected></option>
+                <option value="1">Speaker Name One</option>
+                <option value="2">Speaker Name Two</option>
+                <option value="3">Speaker Name Three</option>
+            </select>
         </div>
 
         <div class="custom-control custom-checkbox">
