Created create_account.html for Organizers to create new accounts. Corrected minor mistake in register.html.

--- a/tuumes/phase2/src/main/resources/static/register.html
+++ b/tuumes/phase2/src/main/resources/static/register.html
@@ -36,7 +36,7 @@
         <div class="row justify-content-center">
             <div class="col-4 align-self-center">
                 <div class="card card-body">
-                    <h5 class="text-center">Register an account<h5>
+                    <h5 class="text-center">Register an account</h5>
                     <form class="container needs-validation" id="register_form">
                         <div class="form-row">
                             <div class="md-form md-outline col-12 mb-0">
