Created modify_event.html for Organizers to modify or remove events. Made minor changes in create_account and create_event.

--- a/tuumes/phase2/src/main/resources/static/account/organizer/create_account.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/create_account.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Register - TUUMES</title>
+    <title>Create Account - TUUMES</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
