--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -49,15 +49,15 @@
 
 <div class="container-fluid mt-5">
     <div class="container white text-center mt-5 pt-4">
-        <h3 class="pb-3">Create a new event:</h3>
+        <h3 class="pb-3">Modify an existing event:</h3>
 
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="name" placeholder="Event Name" type="text">
-        </div>
-
-        <div class="form-group">
-            <textarea autocomplete="off" class="form-control" name="description" placeholder="Event Description"
-                      rows="6"></textarea>
+            <select class="browser-default custom-select" name="event">
+                <option disabled selected>Choose Event</option>
+                <option value="1">Event Name One</option>
+                <option value="2">Event Name Two</option>
+                <option value="3">Event Name Three</option>
+            </select>
         </div>
 
         <div class="form-group">
@@ -70,36 +70,11 @@
             <input autocomplete="off" class="form-control" name="endTime" placeholder="End Time" type="datetime-local">
         </div>
 
-        <div class="form-group">
-            <select name="room" class="browser-default custom-select">
-                <option disabled selected>Room</option>
-                <option value="1">Room Name One</option>
-                <option value="2">Room Name Two</option>
-                <option value="3">Room Name Three</option>
-            </select>
-        </div>
-
-        <p>Select Speakers</p>
-
-        <p>Hold control to select more than one or unselect.</p>
-
-        <div class="form-group">
-            <select class="browser-default custom-select" multiple name="speakers">
-                <option disabled hidden selected></option>
-                <option value="1">Speaker Name One</option>
-                <option value="2">Speaker Name Two</option>
-                <option value="3">Speaker Name Three</option>
-            </select>
-        </div>
-
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="isVip">
-            <label class="custom-control-label" for="isVip">VIPs Only?</label>
-        </div>
-
         <br>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Create</a>
+        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Modify</a>
+        <br> OR <br>
+        <a class="btn btn-danger" href=""><i class="fa fa-calendar-minus fa-lg"></i> &thinsp; Remove Event</a>
         <br><br>
     </div>
 </div>
