Adjusted formatting in view_speaking_events.html. Reworked form in send_message to use contacts instead of emails. Added code to receive confirmation from the program about whether input was a success.

--- a/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/speaker/view_speaking_events.html
@@ -66,7 +66,8 @@
                         <label class="form-check-label" for="event1">
                             <strong>Event Name</strong>
                             <a class="text-muted">Location: 3/5 &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
-                            <a class="text-muted">StartTime - EndTime |</a>
+                            <a class="text-muted">StartTime - EndTime</a>
+                            <br>
                             <a class="text-muted">Description</a>
                         </label>
                     </div>
@@ -78,7 +79,8 @@
                         <label class="form-check-label" for="event2">
                             <strong>Event Name</strong>
                             <a class="text-muted">Location: 3/5 &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
-                            <a class="text-muted">StartTime - EndTime |</a>
+                            <a class="text-muted">StartTime - EndTime</a>
+                            <br>
                             <a class="text-muted">Description</a>
                         </label>
                     </div>
@@ -89,7 +91,8 @@
                         <label class="form-check-label" for="event3">
                             <strong>Event Name</strong>
                             <a class="text-muted">Location: 3/5 &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
-                            <a class="text-muted">StartTime - EndTime |</a>
+                            <a class="text-muted">StartTime - EndTime</a>
+                            <br>
                             <a class="text-muted">Description</a>
                         </label>
                     </div>
@@ -100,7 +103,8 @@
                         <label class="form-check-label" for="event4">
                             <strong>Event Name</strong>
                             <a class="text-muted">Location: 3/5 &nbsp;<i class="fa fa-user-friends fa-lg"></i> |</a>
-                            <a class="text-muted">StartTime - EndTime |</a>
+                            <a class="text-muted">StartTime - EndTime</a>
+                            <br>
                             <a class="text-muted">Description</a>
                         </label>
                     </div>
