--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -21,6 +21,7 @@
             overflow: auto;
             height: 100%;
         }
+
     </style>
 </head>
 
@@ -50,16 +51,25 @@
     <div class="container white text-center mt-5 pt-4">
         <h3 class="pb-3">Compose a new message:</h3>
 
-        <div class="form-group">
-            <input autofocus class="form-control" name="email" placeholder="Recipient Email" type="text">
-        </div>
+        <form class="container needs-validation" id="message_form">
+            <div class="form-group">
+                <!-- TODO: Get user's contacts from program -->
+                <select class="browser-default custom-select" id="recipient" name="recipient" required>
+                    <option disabled hidden selected>Recipient</option>
+                    <option value="1">Contact Name One</option>
+                    <option value="2">Contact Name Two</option>
+                    <option value="3">Contact Name Three</option>
+                </select>
+            </div>
 
-        <div class="form-group">
-            <textarea autocomplete="off" class="form-control" name="message" placeholder="Message Content"
-                      rows="6"></textarea>
-        </div>
+            <div class="form-group">
+                <textarea autocomplete="off" class="form-control" id="message" name="message"
+                          placeholder="Message Content" required rows="6"></textarea>
+            </div>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-paper-plane fa-lg"></i> &thinsp; Send</a>
+            <button class="btn btn-secondary" id="message_submit"><i class="fa fa-paper-plane fa-lg"></i> &thinsp; Send
+            </button>
+        </form>
         <br><br>
     </div>
 </div>
@@ -70,4 +80,41 @@
         type="text/javascript"></script>
 <script src="https://cdn.mkn.cx/MDB/js/mdb.min.js" type="text/javascript"></script>
 <script src="assets/js/global.js" type="text/javascript"></script>
+
+<script>
+    $("#message_form").submit(function(e) {
+        if (!validate(this))
+            return false;
+
+        e.preventDefault();
+
+        // Parse data
+        let data = {};
+        $(":input", this).each(function(i, e) {
+            if (e.type !== "submit")
+                data[e.name] = e.value;
+        });
+
+        $.postJSON("/user/message", data, function(result) {
+            console.log(result);
+
+            if (result.valid) {
+                toastr.success("Your message has been sent.");
+
+            } else {
+                switch (result.message) {
+                    case "USER_DOES_NOT_EXIST":
+                        toastr.error("This user does not exist.");
+                        break;
+                    default:
+                        toastr.error("Unexpected error: " + result.message);
+                        break;
+                }
+            }
+        });
+
+        return false;
+    });
+
+</script>
 </html>
