--- a/tuumes/phase2/src/main/resources/static/account/view_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/view_message.html
@@ -52,8 +52,9 @@
 
         <p class="mb-3">Message content goes here. It contains the message content.</p>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-envelope-open fa-lg"></i> &thinsp; Mark As Read</a><a
-            class="btn btn-secondary" href=""><i class="fa fa-archive fa-lg"></i> &thinsp; Archive</a>
+        <button class="btn btn-secondary"><i class="fa fa-envelope-open fa-lg"></i> &thinsp; Mark As Read</button><button
+            class="btn btn-secondary"><i class="fa fa-archive fa-lg"></i> &thinsp; Archive</button><button
+            class="btn btn-secondary"><i class="fa fa-reply fa-lg"></i> &thinsp; Reply</button>
         <br><br>
     </div>
 </div>
