Reorganized HTML files in the static folder. Made minor adjustments to code as part of this and a couple of corrections.

--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="events/view_all.html">Events</a>
+                    <a class="nav-link" href="events/view_event.html">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="messages/view_all.html">Messages</a>
+                    <a class="nav-link" href="messages/view_message.html">Messages</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="speaker">Speaker</a>
