--- a/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
+++ b/tuumes/phase2/src/main/resources/static/account/organizer/modify_event.html
@@ -21,6 +21,8 @@
             overflow: auto;
             height: 100%;
         }
+
+
     </style>
 </head>
 
@@ -76,12 +78,16 @@
                 <label for="capacity">Capacity:</label>
                 <input class="form-control" id="capacity" min="1" name="capacity" placeholder="Capacity" type="number">
             </div>
-        </form>
-        <br>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Modify</a>
-        <br> OR <br>
-        <a class="btn btn-danger" href=""><i class="fa fa-calendar-minus fa-lg"></i> &thinsp; Remove Event</a>
+            <br>
+
+            <button class="btn btn-secondary" type="submit"><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Modify
+            </button>
+            <br> OR <br>
+            <button class="btn btn-danger" type="submit"><i class="fa fa-calendar-minus fa-lg"></i> &thinsp; Remove
+                Event
+            </button>
+        </form>
         <br><br>
     </div>
 </div>
