--- a/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
+++ b/tuumes/phase2/src/main/resources/static/account/messages/send_message.html
@@ -22,6 +22,7 @@
             height: 100%;
         }
 
+
     </style>
 </head>
 
@@ -67,7 +68,8 @@
                           placeholder="Message Content" required rows="6"></textarea>
             </div>
 
-            <button class="btn btn-secondary" id="message_submit"><i class="fa fa-paper-plane fa-lg"></i> &thinsp; Send
+            <button class="btn btn-secondary" id="message_submit" type="submit"><i class="fa fa-paper-plane fa-lg"></i>
+                &thinsp; Send
             </button>
         </form>
         <br><br>
@@ -115,6 +117,7 @@
 
         return false;
     });
+
 
 </script>
 </html>
