Added Speaker email to view_events (renamed from view_event). Renamed view_message to view_messages. Created my_events to display all events the user is registered for.

--- a/tuumes/phase2/src/main/resources/static/account/events/my_events.html
+++ b/tuumes/phase2/src/main/resources/static/account/events/my_events.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>EventName - TUUMES</title>
+    <title>My Events - TUUMES</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/Manrope/index.css" rel="stylesheet">
     <link href="https://cdn.mkn.cx/MDB/css/mdb.min.css" rel="stylesheet">
@@ -10,6 +10,7 @@
         .container {
             border-radius: 25px
         }
+
     </style>
 </head>
 
@@ -39,15 +40,21 @@
     <div class="container white text-center mt-5 pt-4">
         <h3>Event Name</h3>
 
-        <p class="mt-4 mb-4">Event description goes here. It describes the event concisely.</p>
+        <p class="mt-2 mb-2">Event description goes here. It describes the event concisely.</p>
 
-        <p class="mt-3 mb-3">Time: Event start time through event end time</p>
+        <p class="mt-2 mb-2">Time: Event start time through event end time</p>
 
-        <p class="mt-3 mb-3">Location: Room name goes here.</p>
+        <p class="mt-2 mb-2">Location: Room name goes here.</p>
 
-        <p class="mt-3 mb-3">Capacity: #/total</p>
+        <p class="mt-2 mb-2">Capacity: #/total</p>
 
-        <a class="btn btn-secondary" href=""><i class="fa fa-calendar-plus fa-lg"></i> &thinsp; Register</a>
+        <a class="mt-2 mb-2" href="">Contact: SpeakerEmail@Email.com</a>
+
+        <br>
+
+        <button class="btn btn-secondary" id="unregister" type="submit"><i class="fa fa-calendar-minus fa-lg"></i> &thinsp;
+            Unregister
+        </button>
         <br><br>
     </div>
 </div>
