--- a/tuumes/phase2/src/main/resources/static/account/dashboard.html
+++ b/tuumes/phase2/src/main/resources/static/account/dashboard.html
@@ -24,30 +24,25 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="events/view_events.html">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="messages/view_messages.html">Messages</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="speaker">Speaker</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="organizer">Organizer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="settings.html">Settings</a>
+                    <a class="nav-link" href="../index.html">Logout</a>
                 </li>
             </ul>
-            <span class="navbar-text white-text">
-                Guest
-            </span>
         </div>
     </nav>
 
     <div class="container">
         <h1 class="text-center">Your Dashboard</h1>
         <div class="row justify-content-center mt-4">
+            <div class="col-2">
+                <div class="card">
+                    <a href="contacts/view_contacts.html">
+                        <div class="card-content text-center">
+                            <h1 class="bigicon"><i class="fas fa-address-book"></i></h1>
+                            <h4 class="mb-3">Contacts</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
             <div class="col-2">
                 <div class="card">
                     <a href="events/view_all.html">
@@ -105,5 +100,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdn.mkn.cx/MDB/js/mdb.min.js"></script>
-<script type="text/javascript" src="assets/js/global.js"></script>
+<script type="text/javascript" src="../assets/js/global.js"></script>
+<script type="text/javascript" src="../assets/js/account.js"></script>
 </html>
